# ecargo

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  ecargo.c  ecargo_server.c
include/ecargo/: exit_code.h  init.h  input.h  language.h  print.h  text.h  validate.h
src/: CMakeLists.txt  init.c  input.c  print.c  validate.c
